Work on backend exhibition management and connecting to cmtoolbox
