# backend/Api/openapi.json
@@ -1,17 +1,30 @@
 {
-  "x-generator": "NSwag v13.10.7.0 (NJsonSchema v10.3.9.0 (Newtonsoft.Json v10.0.0.0))",
+  "x-generator": "NSwag v13.18.0.0 (NJsonSchema v10.8.0.0 (Newtonsoft.Json v10.0.0.0))",
   "openapi": "3.0.0",
   "info": {
     "title": "My Title",
     "version": "1.0.0"
   },
   "paths": {
-    "/Connection/pending": {
+    "/events": {
       "get": {
         "tags": [
-          "Connection"
+          "EventSocket"
         ],
-        "operationId": "Connection_GetPending",
+        "operationId": "EventSocket_Get",
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/exhibit/pending": {
+      "get": {
+        "tags": [
+          "Exhibit"
+        ],
+        "operationId": "Exhibit_GetPendingConnections",
         "responses": {
           "200": {
             "description": "",
@@ -29,12 +42,12 @@
         }
       }
     },
-    "/Connection/connected": {
+    "/exhibit/established": {
       "get": {
         "tags": [
-          "Connection"
+          "Exhibit"
         ],
-        "operationId": "Connection_GetConnected",
+        "operationId": "Exhibit_GetEstablishedConnections",
         "responses": {
           "200": {
             "description": "",
@@ -52,16 +65,17 @@
         }
       }
     },
-    "/Connection/accept": {
+    "/exhibit/accept/{id}": {
       "post": {
         "tags": [
-          "Connection"
+          "Exhibit"
         ],
-        "operationId": "Connection_AcceptPending",
+        "operationId": "Exhibit_AcceptConnection",
         "parameters": [
           {
             "name": "id",
-            "in": "query",
+            "in": "path",
+            "required": true,
             "schema": {
               "type": "string",
               "nullable": true
@@ -84,20 +98,291 @@
         }
       }
     },
-    "/events": {
-      "get": {
+    "/exhibit/forget/{id}": {
+      "post": {
         "tags": [
-          "EventSocket"
+          "Exhibit"
         ],
-        "operationId": "EventSocket_Get",
+        "operationId": "Exhibit_ForgetConnection",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
         "responses": {
           "200": {
-            "description": ""
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
           }
         }
       }
     },
-    "/Package/available": {
+    "/exhibit/all": {
+      "get": {
+        "tags": [
+          "Exhibit"
+        ],
+        "operationId": "Exhibit_GetAllExhibits",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ExhibitProperties"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/exhibit/send/{exhibit_id}/{package_id}": {
+      "post": {
+        "tags": [
+          "Exhibit"
+        ],
+        "operationId": "Exhibit_SendPackage",
+        "parameters": [
+          {
+            "name": "exhibit_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          },
+          {
+            "name": "package_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 2
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/exposition/new": {
+      "post": {
+        "tags": [
+          "Exposition"
+        ],
+        "operationId": "Exposition_New",
+        "requestBody": {
+          "x-name": "properties",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ExpositionProperties"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/exposition/properties/{id}": {
+      "get": {
+        "tags": [
+          "Exposition"
+        ],
+        "operationId": "Exposition_GetProperties",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Exposition"
+        ],
+        "operationId": "Exposition_SetProperties",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "requestBody": {
+          "x-name": "properties",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ExpositionProperties"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/exposition/graph/{id}": {
+      "get": {
+        "tags": [
+          "Exposition"
+        ],
+        "operationId": "Exposition_GetGraph",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Exposition"
+        ],
+        "operationId": "Exposition_SetGraph",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "requestBody": {
+          "x-name": "graph",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "string"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/package/available": {
       "get": {
         "tags": [
           "Package"
@@ -120,7 +405,7 @@
         }
       }
     },
-    "/Package/download": {
+    "/package/download": {
       "get": {
         "tags": [
           "Package"
@@ -128,7 +413,7 @@
         "operationId": "Package_Download",
         "parameters": [
           {
-            "name": "name",
+            "name": "packageName",
             "in": "query",
             "schema": {
               "type": "string",
@@ -152,7 +437,7 @@
         }
       }
     },
-    "/Package/load": {
+    "/package/load": {
       "post": {
         "tags": [
           "Package"
@@ -193,7 +478,7 @@
         }
       }
     },
-    "/Package/clear": {
+    "/package/clear": {
       "post": {
         "tags": [
           "Package"
@@ -226,5 +511,92 @@
       }
     }
   },
-  "components": {}
+  "components": {
+    "schemas": {
+      "ExhibitProperties": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "hostname": {
+            "type": "string",
+            "nullable": true
+          },
+          "tags": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "type": "string"
+            }
+          },
+          "sensors": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/SensorProperties"
+            }
+          }
+        }
+      },
+      "SensorProperties": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "path": {
+            "type": "string",
+            "nullable": true
+          },
+          "friendlyName": {
+            "type": "string",
+            "nullable": true
+          },
+          "valueType": {
+            "$ref": "#/components/schemas/ValueType"
+          }
+        }
+      },
+      "ValueType": {
+        "type": "integer",
+        "description": "",
+        "x-enumNames": [
+          "Void",
+          "Bool",
+          "Number",
+          "Complex"
+        ],
+        "enum": [
+          0,
+          1,
+          2,
+          3
+        ]
+      },
+      "ExpositionProperties": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "startDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "endDate": {
+            "type": "string",
+            "format": "date"
+          }
+        }
+      }
+    }
+  }
 }
